--- a/newhorizons/staticfiles/stylesheets/styles.scss
+++ b/newhorizons/staticfiles/stylesheets/styles.scss
@@ -40,10 +40,10 @@ $footer: $dark-blue;
 $home-page-panels: 306px;
 $home-page-course-panels: 230px;
 $leftbar: 195px;
-$main: 489px;
+$main: 485px;
 $main-padding: 0 20px;
 $main-full: 960px;
-$rightbar: 236px;
+$rightbar: 240px;
 $no-rightbar-main: 708px;
 
 /* Effects */
@@ -420,17 +420,17 @@ img.icon {
 }
 .schedule {
     .item {
+	background-color: $gray;
+
 	height: 14px;
-	padding: 4px 7px;
+	padding:7px;
 	>div {
 	    float: left;
 	}
     .last-child {
         float: right;
     }
-    }
-    .item:nth-child(odd) {
-	background-color: $gray;
+    + .item { border-top: 1px solid;}
     }
 }
 #relatedlinks_panel {
@@ -469,15 +469,15 @@ img.icon {
     content: "";
 }
 .page_category_list {
-    padding: 6px;
+    //padding: 6px;
     font-size: 0.8em;
-    font-weight: 600;
+    font-weight: bold;
     span.current {
 	text-decoration: underline;
     }
     a, span {
 	padding: 0 11px;
-    margin-bottom: 4px;
+    //margin-bottom: 4px;
     }
 }
 .previous_page, .next_page {
@@ -502,6 +502,7 @@ img.icon {
 /**********************************************************************************************/
 
 @mixin area-theme($color, $light-color, $dark-color) {
+    .page_category_list { background: $color;}
     .page_content_header {
 	background-color: $color;
     }
@@ -546,26 +547,30 @@ img.icon {
     }
     #right_bar .schedule .page_category_list {
         a {
-            color: $la-color;
+            color: #fff;
             float:left;
-            width: 32px;
+            @if $color == $la-color { width: 32px; padding:7px 8px;}
+            @else { width: 50%; padding: 7px 6px;}
             text-align:center;
-            +a { border-left: 1px solid;}
-            +span { border-left: 1px solid; border-right: 1px solid;}
-            +span:last-child { border-right: none;}
+            background: $color;
+           // +a { border-left: 1px solid;}
+           // +span { border-left: 1px solid; border-right: 1px solid;}
+           // +span:last-child { border-right: none;}
         }
         span {
             float:left;
-            width:32px;
+            @if $color == $la-color { width: 32px;}
+            @else { width: 38.2%;}
             text-align:center;
+            padding:7px 8px;
+            background: $gray;
         }
         span:first-child {
             border-left:none;
-            border-right: 1px solid;
         }
     }
     #right_bar .schedule a {
-        color: $la-color;
+        color: $color;
     }
     #right_bar .schedule .content {
         clear:both;
