--- a/newhorizons/staticfiles/stylesheets/styles.scss
+++ b/newhorizons/staticfiles/stylesheets/styles.scss
@@ -502,7 +502,8 @@ img.icon {
 /**********************************************************************************************/
 
 @mixin area-theme($color, $light-color, $dark-color) {
-    .page_category_list { background: $color;}
+    @if $color != $ac-color { .page_category_list { background: $color;} }
+    @else { .page_category_list {display:none;} }
     .page_content_header {
 	background-color: $color;
     }
@@ -549,7 +550,7 @@ img.icon {
         a {
             color: #fff;
             float:left;
-            @if $color == $la-color { width: 32px; padding:7px 8px;}
+            @if $color == $la-color or $color == $ac-color { width: 32px; padding:7px 8px;}
             @else { width: 50%; padding: 7px 6px;}
             text-align:center;
             background: $color;
@@ -559,7 +560,7 @@ img.icon {
         }
         span {
             float:left;
-            @if $color == $la-color { width: 32px;}
+            @if $color == $la-color or $color == $ac-color{ width: 32px;}
             @else { width: 38.2%;}
             text-align:center;
             padding:7px 8px;
@@ -977,9 +978,9 @@ img.icon {
     .panel {
 	width: 306px;
 	.footer {
-	    position: absolute;
-	    bottom: 0;
-	    right: 10px;
+	    //position: absolute;
+	    //bottom: 0;
+	    //right: 10px;
 	}
     }
     .testimonial {
@@ -1043,9 +1044,10 @@ img.icon {
 	>div:first-child, >div:nth-child(2) { margin-right: 20px; }
     }
     .schedule {
-	position: relative;
-	padding: 10px;
-	height: 110px;
+	//position: relative;
+	padding: 0 10px;
+	//height: 110px;
+    .item { height: auto; padding: 3px 6px;}
 	h2 {
 	    padding: 5px 0 3px 0;
 	    color: $dark-blue;
@@ -1061,13 +1063,17 @@ img.icon {
 	}
 	.content {
 	    .title {
-		width: 100px;
+		width: 100%;
+        font-size: 11px;
+        font-weight: bold;
 	    }
-	    .time {
-		width: 100px;
+	    .time, .location {
+		//width: 100px;
+        font-size: 75%;
 	    }
 	    .location {
-		width: 60px;
+		//width: 60px;
+        float:right;
 	    }
 	}
 	.footer {
