--- a/newhorizons/template/base.html
+++ b/newhorizons/template/base.html
@@ -142,6 +142,7 @@
                                 <ul>
                                     <li><h3><a href="{% url 'languagearts_home' %}">{% trans "language arts" %}</a></h3></li>
                                     <li><h3><a href="{% url 'testpreparations_home' %}">{% trans "test preparation" %}</a></h3></li>
+                                    <li><h3><a href="{% url 'admissionscounseling_home' %}">{% trans "admissions counseling" %}</a></h3></li>
                                 </ul>
                             </div>
                         </li>
