--- a/newhorizons/staticfiles/stylesheets/styles.scss
+++ b/newhorizons/staticfiles/stylesheets/styles.scss
@@ -700,7 +700,7 @@ img.icon {
 	}
 	.content {
 	    @include shadow($shadow);
-	    min-height: 150px;
+	    min-height: 110px;
 	    font-size: 0.825em;
 	    #font-style: italic;
 	    padding: 15px 10px;
@@ -977,11 +977,13 @@ img.icon {
 .home_page {
     .panel {
 	width: 306px;
+    height:326px;
 	.footer {
 	    //position: absolute;
 	    //bottom: 0;
 	    //right: 10px;
 	}
+    > ul + .footer { position: absolute; bottom: 0; right:0;}
     }
     .testimonial {
 	ul {
@@ -1020,7 +1022,7 @@ img.icon {
 	}
 	li {
 	    position: relative;
-	    margin: 10px 5px;
+	    margin: 10px 5px 35px 5px;
 	    height: 96px;
 	    h2 {
 		color: $dark-blue;
@@ -1047,7 +1049,10 @@ img.icon {
 	//position: relative;
 	padding: 0 10px;
 	//height: 110px;
-    .item { height: auto; padding: 3px 6px;}
+    .item { 
+            height: auto; padding: 3px 6px;
+        }
+        .item:nth-child(even) { background: #f2f2f6 !important;}
 	h2 {
 	    padding: 5px 0 3px 0;
 	    color: $dark-blue;
@@ -1078,6 +1083,7 @@ img.icon {
 	}
 	.footer {
 	    font-weight: bold;
+        padding: 6px 0;
 	}
     }
 }
@@ -1420,6 +1426,9 @@ img.icon {
 	color: $white;
 	background-color: $gold;
 	text-transform: capitalize;
+    }
+    #right_bar {
+        width:204px;
     }
 }
 .contactus_page {
