finished translation issue. fixed blog feed issue having to do with bad dbquery slice from original code.

--- a/newhorizons/template/courses/index_cc.html
+++ b/newhorizons/template/courses/index_cc.html
@@ -30,7 +30,7 @@
             {% for item in blog_list %}
                 <div class="item"><a href="{% url "blog" %}" >
                     <div class="title">{{ item.title }}</div>
-                    <div class="time">{{ item.created|date:"Y-m-d" }}</div>
+                    <!--<div class="time">{{ item.created|date:"Y-m-d" }}</div>-->
                 </a></div>
             {% endfor %}
         </div>
@@ -45,7 +45,7 @@
             {% for item in news_list %}
                 <div class="item"><a href="{% url "newsandevents" %}">
                     <div class="title">{{ item.title }}</div>
-                    <div class="time">{{ item.created|date:"Y-m-d" }}</div>
+                    <!--<div class="time">{{ item.created|date:"Y-m-d" }}</div>-->
                 </a></div>
             {% endfor %}
         </div>
