--- a/newhorizons/template/courses/index_ac.html
+++ b/newhorizons/template/courses/index_ac.html
@@ -11,7 +11,7 @@
                     {% for item in blog_list %}
                         <div class="item"><a href="{% url "blog" %}" >
                             <div class="title">{{ item.title }}</div>
-                            <div class="time">{{ item.created|date:"Y-m-d" }}</div>
+                            <!--<div class="time">{{ item.created|date:"Y-m-d" }}</div>-->
                         </a></div>
                     {% endfor %}
                 </div>
@@ -26,7 +26,7 @@
                     {% for item in news_list %}
                         <div class="item"><a href="{% url "newsandevents" %}">
                             <div class="title">{{ item.title }}</div>
-                            <div class="time">{{ item.created|date:"Y-m-d" }}</div>
+                            <!--<div class="time">{{ item.created|date:"Y-m-d" }}</div>-->
                         </a></div>
                     {% endfor %}
                 </div>
