--- a/newhorizons/template/courses/class_list_preview.html
+++ b/newhorizons/template/courses/class_list_preview.html
@@ -8,7 +8,19 @@
         <div class="item">
             <div class="title">{{ item.course.name}}</div>
             <div class="time">{{ item.start_time|date:"M d" }}-{{ item.end_time|date:"M d" }}</div>
-            <div class="location">{{ item.location.all|join:", " }}</div>
+            <div class="location last-child">
+                {% for location in item.location.all %}
+                {% if location|stringformat:"s" == "Huacao" %}
+                        {% trans "Huacao" %}
+                    {% elif location|stringformat:"s" == "Jinqiao" %}
+                        {% trans "Jinqiao" %}
+                    {% elif location|stringformat:"s" == "Hongqiao" %}
+                        {% trans "Hongqiao" %}
+                    {% endif %}
+                    {% if not forloop.last %}, {% endif %}
+                {% endfor %}
+                </div>
+
             <div style="clear:both !important;float:none;"></div>
         </div>
     {% endfor %}
