--- a/newhorizons/template/courses/schedule_list.html
+++ b/newhorizons/template/courses/schedule_list.html
@@ -12,7 +12,20 @@
             <div class="content">
                 <div class="title">{{ item.course.name }}</div>
                 <div class="time">{{ item.start_time|date:"M d" }}-{{ item.end_time|date:"M d" }}</div>
-                <div class="location">{{ item.location.all|join:", " }}</div>
+                <!--<div class="location">{{ item.location.all|join:", " }}</div>-->
+            <div class="location last-child">
+                {% for location in item.location.all %}
+                {% if location|stringformat:"s" == "Huacao" %}
+                        {% trans "Huacao" %}
+                    {% elif location|stringformat:"s" == "Jinqiao" %}
+                        {% trans "Jinqiao" %}
+                    {% elif location|stringformat:"s" == "Hongqiao" %}
+                        {% trans "Hongqiao" %}
+                    {% endif %}
+                    {% if not forloop.last %}, {% endif %}
+                {% endfor %}
+            </div>
+
                 <div class="file">{% if item.schedule %}<a target="_blank" href="{{ item.schedule.url }}">Download PDF</a>{% endif %}</div>
             </div>
         </div>
